fixed white space issue

--- a/src/ui/layouts/common/layouts/AuthenticatedLayout/index.module.scss
+++ b/src/ui/layouts/common/layouts/AuthenticatedLayout/index.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../globalStyles.scss';
 
 .content {
-  height: calc(100vh - #{$headerHeight});
+  height: 100vh;
   overflow-y: auto;
 }
